# Smart_calc

./: README.md
src/: Makefile  calculations.c  calculations.h  parse_input.c  parse_input.h  reverse_polish_notation.c  reverse_polish_notation.h  utils.c  utils.h
src/datastructs/: linked_list.c  linked_list.h  stack_list.c  stack_list.h  stack_num.c  stack_num.h
src/smart_calc/: CMakeLists.txt  CMakeLists.txt.user.7778286  credit.cpp  credit.h  credit.ui  creditwindow.cpp  creditwindow.h  creditwindow.ui  deposit.cpp  deposit.h  depositwindow.cpp  depositwindow.h  depositwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/test/: test.h  test_case_general.c  test_main.c
